Updated docs to reflect latest changes.

--- a/componentkit.html
+++ b/componentkit.html
@@ -37,6 +37,9 @@
 							<a class="source" href="icomponent.html">
 								IComponent.cs
 							</a>
+							<a class="source" href="ientitydefinitioncollection.html">
+								IEntityDefinitionCollection.cs
+							</a>
 							<a class="source" href="ientityrecord.html">
 								IEntityRecord.cs
 							</a>
@@ -60,6 +63,9 @@
 							</a>
 							<a class="source" href="model/entity.html">
 								Model\Entity.cs
+							</a>
+							<a class="source" href="model/entitydefinitions.html">
+								Model\EntityDefinitions.cs
 							</a>
 							<a class="source" href="model/entityrecord.html">
 								Model\EntityRecord.cs
@@ -105,24 +111,22 @@
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_2">&#182;</a>
 							</div>
-							<h3>What it is</h3>
+							<p><strong>ComponentKit</strong> provides a set of <strong>C#</strong> interfaces and classes that are useful when you need to maintain an
+<strong>in-memory database</strong> of <strong>entity</strong> composites.</p>
 
-<p><strong>ComponentKit</strong> provides a set of <strong>C#</strong> interfaces and classes that are useful when you need to maintain an <strong>in-memory database</strong> of <strong>entity</strong> composites.</p>
+<p>Features include: <strong>triggers</strong>, for handling the processing of components, <strong>dependency injection</strong>, and some
+very basic <strong>inter-component messaging</strong>.</p>
 
-<p>Features include: <strong>triggers</strong>, for handling the processing of components, <strong>dependency injection</strong>, and some very basic <strong>inter-component messaging</strong>.</p>
+<h3>How does it work?</h3>
 
-<p>The programming model is similar to that found in these cool things:</p>
+<p>The <em>entity/component</em> model is popularly used in game programming, and the scripting in <a href="http://www.unity3d.com">Unity3D</a> 
+is a great example of how it works in action.</p>
 
-<ul>
-<li>The scripting in <a href="http://www.unity3d.com">Unity3D</a></li>
-<li><a href="http://pushbuttonengine.com">PushButton Engine V2</a></li>
-</ul>
+<p>Further <strong>documentation</strong> can be found through the button at the upper-right corner of this page.
+All documentation has been generated straight from the source, using <a href="http://dontangg.github.com/nocco/">Nocco</a>.</p>
 
-<p>Though originally intended as an educational reference/example on how to implement <em>yet another entity system</em>, it should be perfectly fine for use in real productions too.</p>
-
-<p>Further <strong>documentation</strong> can be found through the button at the upper-right corner of this page. All documentation has been generated straight from the source, using <a href="http://dontangg.github.com/nocco/">Nocco</a>.</p>
-
-<p>The complete <a href="http://github.com/shrt/ComponentKit">source for ComponentKit</a> can be found at github. Do with it what you want!</p>
+<p>The complete <a href="http://github.com/shrt/ComponentKit">source for ComponentKit</a> can be found at github. 
+Do with it what you want!</p>
 
 						</td>
 						<td class="code">
