--- a/entityeventargs.html
+++ b/entityeventargs.html
@@ -37,6 +37,9 @@
 							<a class="source" href="icomponent.html">
 								IComponent.cs
 							</a>
+							<a class="source" href="ientitydefinitioncollection.html">
+								IEntityDefinitionCollection.cs
+							</a>
 							<a class="source" href="ientityrecord.html">
 								IEntityRecord.cs
 							</a>
@@ -60,6 +63,9 @@
 							</a>
 							<a class="source" href="model/entity.html">
 								Model\Entity.cs
+							</a>
+							<a class="source" href="model/entitydefinitions.html">
+								Model\EntityDefinitions.cs
 							</a>
 							<a class="source" href="model/entityrecord.html">
 								Model\EntityRecord.cs
@@ -93,6 +99,8 @@
 							</div>
 							<h3>TL;DR..</h3>
 
+<p>When an event involves a specific entity, these are used.</p>
+
 						</td>
 						<td class="code">
 							<pre><code class='prettyprint'>
@@ -104,19 +112,6 @@
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_2">&#182;</a>
 							</div>
-							<p>Too bad, because this part is missing right now ^_^</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_3">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_3">&#182;</a>
-							</div>
 							<h2>Source</h2>
 
 						</td>
@@ -127,10 +122,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_4">
+					<tr id="section_3">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_4">&#182;</a>
+								<a class="pilcrow" href="#section_3">&#182;</a>
 							</div>
 							<p>Provides the entity for which an event has occurred.</p>
 
@@ -148,10 +143,10 @@ namespace ComponentKit {
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_5">
+					<tr id="section_4">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_5">&#182;</a>
+								<a class="pilcrow" href="#section_4">&#182;</a>
 							</div>
 							<p>Gets the entity for which the event occurred.</p>
 
@@ -163,13 +158,14 @@ namespace ComponentKit {
         }
     }
 }
+
 </code></pre>
 						</td>
 					</tr>
-					<tr id="section_6">
+					<tr id="section_5">
 						<td class="docs">
 							<div class="pilwrap">
-								<a class="pilcrow" href="#section_6">&#182;</a>
+								<a class="pilcrow" href="#section_5">&#182;</a>
 							</div>
 							<p>Copyright 2012 Jacob H. Hansen.</p>
 
