--- a/model/entitydefinitions.html
+++ b/model/entitydefinitions.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Component.cs</title>
+	<title>EntityDefinitions.cs</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<link href="../nocco.css" rel="stylesheet" media="all" type="text/css" />
 	<script src="../prettify.js" type="text/javascript"></script>
@@ -86,7 +86,7 @@
 			<thead>
 				<tr>
 					<th class="docs">
-						<h1>Component.cs</h1>
+						<h1>EntityDefinitions.cs</h1>
 					</th>
 					<th class="code"></th>
 				</tr>
@@ -99,18 +99,7 @@
 							</div>
 							<h3>TL;DR..</h3>
 
-<p>The <code>Component</code> is sub-classed to build custom behavior.</p>
-
-<h4>Processing</h4>
-
-<p>Triggers can be used to intercept when components are attached/dettached from entities, 
-which makes it easy to add special processing for specific types of components.</p>
-
-<h4>Staying n'sync</h4>
-
-<p>A component becomes out-of-sync when it is no longer attached to an <code>IEntityRecord</code>. Triggers, however, 
-are not guaranteed to be notified of this immediately. For example, the default implementation of 
-<code>IEntityRecordCollection</code> only execute triggers during sync operations.</p>
+<p>Definitions are like prefabs, or blueprints, except without default properties.</p>
 
 						</td>
 						<td class="code">
@@ -128,7 +117,7 @@ are not guaranteed to be notified of this immediately. For example, the default 
 						</td>
 						<td class="code">
 							<pre><code class='prettyprint'>using System;
-using System.Globalization;
+using System.Collections.Generic;
 
 namespace ComponentKit.Model {
 </code></pre>
@@ -139,11 +128,14 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_3">&#182;</a>
 							</div>
-							<p>Represents a single component of an entity.</p>
+							<p>Represents a set of definitions, each describing the composition of an entity.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>    public abstract class Component : IComponent {
+							<pre><code class='prettyprint'>    internal class EntityDefinitions : IEntityDefinitionCollection&lt;string&gt; {
+        IDictionary&lt;string, IList&lt;Type&gt;&gt; _definitions =
+            new Dictionary&lt;string, IList&lt;Type&gt;&gt;();
+
 </code></pre>
 						</td>
 					</tr>
@@ -152,11 +144,14 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_4">&#182;</a>
 							</div>
-							<p>It can only have one immediate parent.</p>
+							<p>Defines a range of components by name. 
+The definition is only established if at least one valid component type is specified.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        IEntityRecord _record;
+							<pre><code class='prettyprint'>        public void Define(string definition, params Type[] types) {
+            Define(definition, null, types);
+        }
 
 </code></pre>
 						</td>
@@ -166,16 +161,36 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_5">&#182;</a>
 							</div>
-							<p>It does keep track of its previous parent though, if any.</p>
-
-<blockquote>
-  <p>Note that this is an implementation detail and is not exposed through the interface.</p>
-</blockquote>
+							<p>Defines a range of components by name, with the option to include a previously defined range. 
+The definition is only established if at least one valid component type is specified.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        IEntityRecord _previousRecord;
+							<pre><code class='prettyprint'>        public void Define(string definition, string inheritFromDefinition, params Type[] types) {
+            if (definition == null || types == null || types.Length == 0) {
+                return;
+            }
 
+            List&lt;Type&gt; componentTypes = new List&lt;Type&gt;();
+
+            if (inheritFromDefinition != null &amp;&amp; _definitions.ContainsKey(inheritFromDefinition)) {
+                componentTypes.AddRange(_definitions[inheritFromDefinition]);
+            }
+
+            foreach (Type type in types) {
+                bool adheresToConstraints = 
+                    Component.IsComponent(type) &amp;&amp; 
+                    type.GetConstructor(Type.EmptyTypes) != null &amp;&amp;
+                    !componentTypes.Contains(type);
+
+                if (adheresToConstraints) {
+                    componentTypes.Add(type);
+                }
+            }
+
+            if (componentTypes.Count &gt; 0) {
+                _definitions[definition] = componentTypes;
+            } else {
 </code></pre>
 						</td>
 					</tr>
@@ -184,11 +199,14 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_6">&#182;</a>
 							</div>
-							<p>Gets or sets the entity that this component is currently attached to.</p>
+							<p>If there's no valid component types, then assume that the definition should be cleared.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public IEntityRecord Record {
+							<pre><code class='prettyprint'>                Undefine(definition);
+            }
+        }
+
 </code></pre>
 						</td>
 					</tr>
@@ -197,34 +215,16 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_7">&#182;</a>
 							</div>
-							<blockquote>
-  <p>The component is in an inconsistent state when the <strong>Record</strong> is not <code>null</code> 
-  but does not have the component attached to it.</p>
-</blockquote>
+							<p>Removes the component definition for the given name.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>            get {
-                return _record;
+							<pre><code class='prettyprint'>        public bool Undefine(string definition) {
+            if (!_definitions.ContainsKey(definition)) {
+                return false;
             }
 
-            set {
-                bool requiresSynchronization =
-                    _previousRecord != null &amp;&amp;
-                    _previousRecord.HasComponent(this);
-
-                if (requiresSynchronization) {
-                    throw new InvalidOperationException(
-                        &quot;Component has to be synchronized before further changes can happen.&quot;);
-                } else {
-                    if (_record == null || !_record.Equals(value)) {
-                        _previousRecord = _record;
-                        _record = value;
-
-                        Synchronize();
-                    }
-                }
-            }
+            return _definitions.Remove(definition);
         }
 
 </code></pre>
@@ -235,16 +235,12 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_8">&#182;</a>
 							</div>
-							<p>The component is considered out-of-sync if it is not attached to any entity.</p>
+							<p>Removes all definitions.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public bool IsOutOfSync {
-            get {
-                return
-                    Record == null ||
-                    !Record.HasComponent(this);
-            }
+							<pre><code class='prettyprint'>        public void Clear() {
+            _definitions.Clear();
         }
 
 </code></pre>
@@ -255,28 +251,11 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_9">&#182;</a>
 							</div>
-							<p>Ensures that the component becomes synchronized by establishing the appropriate relation to its parent entity.</p>
+							<p>Creates a new entity from the specified definition.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public void Synchronize() {
-            if (Record != null) {
-                if (!Record.HasComponent(this)) {
-                    Record.Add(this);
-
-                    OnAdded(new ComponentStateEventArgs(Record, _previousRecord));
-                }
-            } else {
-                if (_previousRecord != null) {
-                    if (_previousRecord.Remove(this)) {
-                        OnRemoved(new ComponentStateEventArgs(Record, _previousRecord));
-
-                        _previousRecord = null;
-                    }
-                }
-            }
-        }
-
+							<pre><code class='prettyprint'>        public IEntityRecord Make(string definition) {
 </code></pre>
 						</td>
 					</tr>
@@ -285,12 +264,15 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_10">&#182;</a>
 							</div>
-							<p>Occurs when the component is attached to an entity.</p>
+							<blockquote>
+  <p>Note that <code>Entity.Create()</code> automatically picks a unique name for the entity.</p>
+</blockquote>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        protected virtual void OnAdded(ComponentStateEventArgs registrationArgs) { }
-
+							<pre><code class='prettyprint'>            return Make(definition, Entity.Create());
+        }
+        
 </code></pre>
 						</td>
 					</tr>
@@ -299,12 +281,21 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_11">&#182;</a>
 							</div>
-							<p>Occurs when the component is dettached from an entity.</p>
+							<p>Realizes the specified definition for a given entity.</p>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        protected virtual void OnRemoved(ComponentStateEventArgs registrationArgs) { }
+							<pre><code class='prettyprint'>        public IEntityRecord Make(string definition, IEntityRecord entity) {
+            if (!_definitions.ContainsKey(definition)) {
+                return null;
+            }
 
+            IList&lt;Type&gt; componentTypes = _definitions[definition];
+
+            foreach (Type componentType in componentTypes) {
+                try {
+                    entity.Add(Component.Create(componentType));
+                } catch (InvalidOperationException) {
 </code></pre>
 						</td>
 					</tr>
@@ -313,11 +304,29 @@ namespace ComponentKit.Model {
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_12">&#182;</a>
 							</div>
-							<p>Receives a message from a containing arbitrary data.</p>
+							<blockquote>
+  <p>A component that doesn't provide a parameter-less constructor will fail instantiation. 
+  If that is the case, skip it.</p>
+</blockquote>
 
 						</td>
 						<td class="code">
-							<pre><code class='prettyprint'>        public virtual void Receive&lt;T&gt;(string message, T data) { }
+							<pre><code class='prettyprint'>                    continue;
+                }
+            }
+
+            return entity;
+        }
+        
+        public IEnumerator&lt;string&gt; GetEnumerator() {
+            return _definitions.Keys.GetEnumerator();
+        }
+
+        System.Collections.IEnumerator System.Collections.IEnumerable.GetEnumerator() {
+            return GetEnumerator();
+        }
+    }
+}
 
 </code></pre>
 						</td>
@@ -326,76 +335,6 @@ namespace ComponentKit.Model {
 						<td class="docs">
 							<div class="pilwrap">
 								<a class="pilcrow" href="#section_13">&#182;</a>
-							</div>
-							<p>Helper method to create an instance of a specified type, and casting it to <code>IComponent</code></p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>        public static IComponent Create(Type type) {
-            IComponent result = null;
-
-            try {
-                result = Activator.CreateInstance(type) as IComponent;
-            } catch (MissingMethodException) {
-                throw new MissingMethodException(String.Format(CultureInfo.CurrentCulture,
-                    &quot;The component type &#39;{0}&#39; does not provide a parameter-less constructor.&quot;, type.ToString()));
-            }
-
-            return result;
-        }
-
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_14">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_14">&#182;</a>
-							</div>
-							<p>Determines whether the given type implements the <code>IComponent</code> interface.</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>        public static bool IsComponent(Type type) {
-            Type[] matchingInterfaces = type.FindInterfaces(
-                IsTypeEqualToName, &quot;ComponentKit.IComponent&quot;);
-
-            if (matchingInterfaces != null &amp;&amp; matchingInterfaces.Length != 0) {
-                return true;
-            }
-
-            return false;
-        }
-
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_15">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_15">&#182;</a>
-							</div>
-							<p>Determines whether the given string filter is equal to the name of the type.</p>
-
-						</td>
-						<td class="code">
-							<pre><code class='prettyprint'>        static bool IsTypeEqualToName(Type m, object filterCriteria) {
-            if (filterCriteria is string) {
-                return m.FullName == (string)filterCriteria;
-            }
-
-            return false;
-        }
-    }
-}
-
-</code></pre>
-						</td>
-					</tr>
-					<tr id="section_16">
-						<td class="docs">
-							<div class="pilwrap">
-								<a class="pilcrow" href="#section_16">&#182;</a>
 							</div>
 							<p>Copyright 2012 Jacob H. Hansen.</p>
 
